--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-family: "Open Sans", sans-serif;
   color: #3e454c;
   background-color: #ffffff;
@@ -30,7 +30,7 @@ a {
 
 input {
   font-family: "Open Sans", sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
 }
 
 input[type="search"]::-webkit-search-decoration,
@@ -45,11 +45,11 @@ input[type="search"]::-webkit-search-results-decoration {
 Main Page Content
 
 -------------------------------- */
-.cd-main-content .content-wrapper {
+.cd-main-content  {
   padding: 45px 5% 3em;
 }
-.cd-main-content .content-wrapper h1 {
-  text-align: center;
+.cd-main-content {
+  text-align: left;
   padding: 3em 0;
   font-size: 2rem;
 }
@@ -59,13 +59,13 @@ Main Page Content
   content: 'mobile';
 }
 @media only screen and (min-width: 768px) {
-  .cd-main-content .content-wrapper {
+  .cd-main-content {
     margin-left: 110px;
     padding-top: 55px;
   }
-  .cd-main-content .content-wrapper h1 {
+  .cd-main-content {
     padding: 4em 0;
-    font-size: 3.2rem;
+    font-size: 1.2rem;
     font-weight: 300;
   }
   .cd-main-content::before {
@@ -73,7 +73,7 @@ Main Page Content
   }
 }
 @media only screen and (min-width: 1170px) {
-  .cd-main-content .content-wrapper {
+  .cd-main-content {
     margin-left: 200px;
   }
   .cd-main-content::before {
@@ -374,7 +374,7 @@ Sidebar
   top: 0;
   width: 100%;
   padding: 45px 0 0;
-  background-color: #2c3136;
+  background-color: ##2c3136;
   visibility: hidden;
   opacity: 0;
   max-height: 100vh;
@@ -410,13 +410,14 @@ Sidebar
   text-transform: uppercase;
   font-weight: bold;
   color: #646a6f;
-  font-size: 11rem;
+  font-size: 100rem;
   letter-spacing: .1em;
 }
+
 .cd-side-nav a {
   position: relative;
   color: #ffffff;
-  font-size: 1.5rem;
+  font-size: 100px;
 }
 .cd-side-nav ul.cd-top-nav > li:last-of-type > a {
   border-bottom: none;
@@ -626,6 +627,7 @@ Sidebar
   width: 100%;
   display: none;
   background-color: #1c1f22;
+  font-size: 100px;
 }
 .has-children > a::after {
   /* arrow icon */
@@ -645,6 +647,7 @@ Sidebar
 }
 .has-children.selected > ul {
   display: block;
+  font-size: 100px;
 }
 .has-children.selected > a::after {
   -webkit-transform: translateY(-50%) rotate(180deg);
@@ -664,10 +667,12 @@ Sidebar
     width: 160px;
     padding: 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    font-size: 100px;
   }
   .has-children ul a {
     text-align: left;
     border: none;
+    font-size: 100px;
     padding: 1em;
   }
   .no-touch .has-children ul a:hover {
@@ -675,6 +680,7 @@ Sidebar
   }
   .has-children > a::after {
     display: none;
+    font-size: 100px;
   }
   .cd-side-nav .has-children.selected > a {
     /* focus state -> show sub pages */
@@ -683,11 +689,13 @@ Sidebar
   .cd-top-nav .has-children {
     position: relative;
     background-color: #2c3136;
+    font-size: 100px;
   }
   .cd-top-nav .has-children > a {
     height: 100%;
     padding: 0 calc(1.8em + 22px) 0 calc(1.8em + 26px) !important;
     line-height: 55px;
+    font-size: 100px;
   }
   .cd-top-nav .has-children > a::after {
     display: block;
@@ -700,9 +708,11 @@ Sidebar
     right: 0;
     left: auto;
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
+    font-size: 100px;
   }
   .cd-top-nav .has-children ul a {
     padding-left: 18px !important;
+    font-size: 100px;
   }
 }
 @media only screen and (min-width: 1170px) {
